# seeka-ai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
.qoder/: seeka_架构设计_e74e0c95.md
.qoder/rules/: rule.md
examples/: conflict_resolution.py  extraction_skills.py  minimal.py  quickstart.py
seeka/: __init__.py  archive.py  memory.py  models.py  notebook.py  skills.py
seeka/embedding/: __init__.py  bailian.py  base.py  custom.py  local.py  openai.py  sentence_transformer.py
seeka/graph/: __init__.py  base.py  maintenance.py  neug.py  pipeline.py
seeka/processor/: __init__.py  agent.py  agentic.py  base.py  conflict.py  entity_resolver.py  graph_conflict.py
seeka/processor/skills/: .gitkeep  __init__.py
seeka/processor/skills/general/: SKILL.md
seeka/processor/skills/preference/: SKILL.md
seeka/rerank/: __init__.py  bailian.py  base.py  cohere.py  cross_encoder.py  custom.py  local.py
seeka/statement/: __init__.py  base.py  cypher.py
seeka/storage/: __init__.py  base.py  lancedb.py  seekdb.py  zvecdb.py
seeka/utils/: uri.py
