[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seeka"
version = "0.2.1"
description = "Embedded Agent memory component"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "lancedb",
    "chakpy",
    "aiosqlite",
    "openai>=1.0",
    "cohere>=5.0",
    "python-dotenv",
    "nanoid",
    "zvec>=0.5.1",
]

[project.optional-dependencies]
# Local embedding/rerank via sentence-transformers (pulls torch + transformers,
# adds ~5 GB to the install). Only needed if you want offline / on-prem
# inference; cloud providers (openai / bailian / cohere) are the default path.
local-embed = ["sentence-transformers>=2.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["seeka*"]
